--- a/src/main/resources/templates/system/user/login.html
+++ b/src/main/resources/templates/system/user/login.html
@@ -9,7 +9,9 @@
     <link href="layui/css/layui.css" rel="stylesheet">
     <style>
         html {
-            background: #000 url(background.jpg) no-repeat center;
+            background-image: url("/background.jpg");
+            background-repeat: no-repeat;
+            background-position: center;
             background-size: cover;
             background-attachment: fixed;
         }
