--- a/src/main/resources/templates/workbench/index.html
+++ b/src/main/resources/templates/workbench/index.html
@@ -19,9 +19,9 @@
         }
 
         html {
-            /*background-color: #f2f2f2;*/
-            /*color: #666;*/
-            background: #000 url(background.jpg) no-repeat center;
+            background-image: url("/background.jpg");
+            background-repeat: no-repeat;
+            background-position: center;
             background-size: cover;
             background-attachment: fixed;
         }
