--- a/src/main/resources/templates/workbench/index.html
+++ b/src/main/resources/templates/workbench/index.html
@@ -36,7 +36,7 @@
             <li class="layui-nav-item layui-hide layui-show-md-inline-block">
                 <a href="javascript:;">
                     <img class="layui-nav-img"
-                         src="//tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg">
+                         src="/background.jpg">
                     [[${session.sessionUser.name}]]
                 </a>
                 <dl class="layui-nav-child">
